--- a/package.json
+++ b/package.json
@@ -5,29 +5,33 @@
   "author": "Marvin Hockenjos",
   "license": "MIT",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.12"
+  },
   "scripts": {
-    "build": "NODE_ENV=production rm -rf ../static/dist && webpack -p",
-    "build-dev": "NODE_ENV=development webpack --progress --colors --watch",
-    "start": "npm run build-dev"
+    "build": "rm -rf ../static/dist && webpack --mode production",
+    "dev": "webpack serve --mode development --progress --open",
+    "start": "npm run dev"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
-    "css-loader": "^0.28.0",
-    "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "jquery": "^3.2.1",
-    "postcss": "^7.0.5",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.1.1",
-    "postcss-simple-vars": "^5.0.1",
-    "style-loader": "^0.16.1",
-    "tachyons": "^4.9.1",
-    "webpack": "^2.3.3"
+    "assets-webpack-plugin": "^7.1.1",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.3",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-nested": "^7.0.2",
+    "postcss-preset-env": "^10.2.4",
+    "postcss-simple-vars": "^7.0.1",
+    "postcss-loader": "^8.1.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.101.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "cross-env": "^10.0.0",
+    "rimraf": "^6.0.1",
+    "tachyons": "^4.12.0"
   }
 }
