--- a/package.json
+++ b/package.json
@@ -9,29 +9,32 @@
     "node": ">=18.12"
   },
   "scripts": {
-    "build": "rm -rf ../static/dist && webpack --mode production",
-    "dev": "webpack serve --mode development --progress --open",
+    "build": "rm -rf static/dist && webpack --mode production",
+    "dev": "webpack --mode development --watch",
     "start": "npm run dev"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^7.1.1",
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
+    "assets-webpack-plugin": "^7.1.1",
     "babel-loader": "^10.0.0",
+    "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
-    "mini-css-extract-plugin": "^2.9.3",
+    "cssnano": "^7.1.0",
+    "mini-css-extract-plugin": "^2.9.4",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
+    "postcss-loader": "^8.1.0",
     "postcss-nested": "^7.0.2",
     "postcss-preset-env": "^10.2.4",
     "postcss-simple-vars": "^7.0.1",
-    "postcss-loader": "^8.1.0",
+    "rimraf": "^6.0.1",
+    "sass": "^1.90.0",
+    "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "tachyons": "^4.12.0",
     "webpack": "^5.101.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2",
-    "cross-env": "^10.0.0",
-    "rimraf": "^6.0.1",
-    "tachyons": "^4.12.0"
+    "webpack-dev-server": "^5.2.2"
   }
 }
