--- a/config.toml
+++ b/config.toml
@@ -12,39 +12,15 @@ SectionPagesMenu = "main"
 
 [params.pageColors]
   default = "#ececec"
-  about = "#ffca28"
-  blog = "#2196F3"
-  unterricht = "#26a69a"
-  contact = "#fb8c00"
 
 [[params.social]]
-  name = "Github"
-  title = "Marvin Hockenjos on Github"
+  name = "GitHub"
   url = "https://github.com/marvhock"
-  image = "github.svg"
 
 [[params.social]]
-  name = "Twitter"
-  title = "Marvin Hockenjos on Twitter"
-  url = "https://twitter.com/marvhock"
-  image = "twitter.svg"
+  name = "LinkedIn"
+  url = "https://www.linkedin.com/in/marvin-hockenjos-68b790227"
 
 [[params.social]]
-  name = "Linkedin"
-  title = "Marvin Hockenjos on Linkedin"
-  url = "https://linkedin.com/in/marvhock"
-
-[[params.social]]
-  name = "Xing"
-  title = "Marvin Hockenjos on Xing"
+  name = "XING"
   url = "https://www.xing.com/profile/Marvin_Hockenjos/cv"
-
-[[params.social]]
-  name = "Stackoverflow"
-  title = "Marvin Hockenjos on Stackoverflow"
-  url = "https://stackoverflow.com/users/4019739/marvhock?tab=profile"
-
-[[params.social]]
-  name = "Codepen"
-  title = "Marvin Hockenjos on Codepen"
-  url = "https://codepen.io/marvhock/"
